# eth-block-api

./: .gitignore  README.md
assets/diagrams/: eth-block-service.drawio
eth-api/: README.md  eth-api.dockerfile  go.mod  go.sum  main.go
eth-api/app/: server.go
eth-blocks-cron/: go.mod
eth-blocks-recorder/: eth-blocks-recorder.dockerfile  go.mod
eth-blocks-req/: go.mod
eth-blocks-requester/: eth-blocks-requester.dockerfile  go.mod
eth-blocks-scheduler/: eth-blocks-scheduler.dockerfile  go.mod
eth-blocks-store/: eth-blocks-store.dockerfile  go.mod
eth-builder/: Makefile  README.md  docker-compose.yaml  mongo.dockerfile  mongodb-keyfile
eth-cron/: go.mod  go.sum
eth-emitter/: go.mod
eth-fe/: Cargo.toml  LICENSE-MIT  README.md  index.html
eth-fe/assets/styles/: main.css
eth-fe/src/: app.rs  main.rs
eth-fe/src/components/: input.rs
eth-fe/src/sections/: blocks.rs  events.rs  latests.rs  mod.rs  transactions.rs
eth-fe/src/views/: home.rs
eth-helpers/: go.mod  go.sum
eth-infra/: documentdb.tf  mq.tf
eth-listener/: go.mod  go.sum
eth-redis-recorder/: eth-redis-recorder.dockerfile  go.mod  go.sum
eth-req/: go.mod
eth-service-builder/: Makefile  README.md  docker-compose.yaml
eth-store/: go.mod  go.sum
eth-transactions-recorder/: eth-transactions-recorder.dockerfile  go.mod  go.sum
eth-transactions-req/: go.mod
eth-transactions-requester/: eth-transactions-requester.dockerfile  go.mod
eth-transactions-scheduler/: .air.toml  eth-transactions-scheduler.dockerfile  go.mod  go.sum
eth-transactions-store/: go.mod
(+162 files in other folders)
