[package]
name = "eth-fe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }

# Form
log = "0.4.6"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
web-sys = "0.3.61"
yew-router = "0.17"
serde = "1.0.152"
serde_json = "1.0.94"
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4"
yew-bootstrap = "0.5.16"
regex = "1.9.5"
async-std = "1.12.0"
dotenv = "0.15.0"
cfg-if = "1.0"
once_cell = "1.10.2"